objects/Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Questions__c</fullName>
        <label>Questions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Points__c</fullName>
        <label>Total Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Assignment</label>
    <nameField>
        <label>Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>